[package]
name = "acp-traces"
version = "0.2.0"
edition = "2021"
description = "OTel GenAI semconv-compliant tracing proxy for Agent Client Protocol"
license = "Apache-2.0"

[lib]
name = "acp_traces"
path = "src/lib.rs"

[[bin]]
name = "acp-traces"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "http-proto"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
