[package]
name = "acp-traces"
version = "0.3.0"
edition = "2021"
description = "OTel GenAI semconv-compliant tracing proxy for Agent Client Protocol"
license = "Apache-2.0"
repository = "https://github.com/AndreKurait/acp-traces"
homepage = "https://github.com/AndreKurait/acp-traces"
keywords = ["acp", "opentelemetry", "tracing", "agent", "observability", "otlp"]
categories = ["development-tools", "observability"]

[lib]
name = "acp_traces"
path = "src/lib.rs"

[[bin]]
name = "acp-traces"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "http-proto", "http-json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
